rns-lang/tests/snapshots/parser-outside_class_directive-string_literal_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
"Hello World"
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected string literal
   ╭─[ test_data/integration/parser/outside_class_directive/string_literal_outside.ja:1:1 ]
   │
 1 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── The 'Hello World' string literal cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
